--- a/style.css
+++ b/style.css
@@ -23,13 +23,18 @@ body {
   font-family: "Inter", sans-serif;
   line-height: 1;
   font-weight: 400;
+  background-color: #111;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .container {
   max-width: 120rem;
-  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
+  align-items: center;
   gap: 10rem;
 }
 .section-main {
@@ -40,74 +45,46 @@ body {
   background-color: #193718;
   padding: 3.2rem 3.2rem;
   border-radius: 5px;
-  box-shadow: 0 0 8px #777;
+  box-shadow: 0 0 8px #000;
 }
-.card-left {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  position: relative;
-}
-.title {
-  font-size: 2.4rem;
-  margin-bottom: 0.6rem;
+.gradient-text {
   background-color: #193718;
   background-image: linear-gradient(
-    90deg,
-    #e67efe 10%,
-    #f08383 20%,
-    #777 30%,
-    #dfffe2 40%,
-    #3fc0ef9e 50%,
-    #ff8bff 60%,
-    #f2fc5e 70%,
-    #4cf3bb 80%,
-    #cef8afca 90%,
-    #a38282 100%
+    45deg,
+    #f0ec83 25%,
+    #dfffe2 50%,
+    #3fefb49e 75%,
+    #ff8bff 100%
   );
 
-  background-size: 100%;
-  background-repeat: repeat;
-
+  background-size: 50%;
   /* Use the text as a mask for the background. */
   /* This will show the gradient as a text color rather than element bg. */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-
-  animation: title-animation 9999s ease-out;
 }
-
-@keyframes title-animation {
-  10% {
-    background-size: 100%;
-  }
-  20% {
-    background-size: 90%;
-  }
-  30% {
-    background-size: 80%;
-  }
-  40% {
-    background-size: 70%;
-  }
-  50% {
-    background-size: 60%;
-  }
-  60% {
-    background-size: 50%;
-  }
-  70% {
-    background-size: 40%;
-  }
-  80% {
-    background-size: 30%;
-  }
-  90% {
-    background-size: 20%;
-  }
-  100% {
-    background-size: 10%;
-  }
+/* CARD LEFT */
+.card-left {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+.title {
+  font-size: 2.4rem;
+  margin-bottom: 0.6rem;
+  letter-spacing: 4px;
+}
+.date-detailed {
+  letter-spacing: 2px;
+  text-shadow: 0 0 10px #000;
+  font-weight: 400;
+  font-size: 1.8rem;
+}
+.date-detailed span {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 2rem;
 }
 .dot-animated:after {
   content: ".";
@@ -132,8 +109,10 @@ body {
   }
 }
 
-.search-box input {
+.input-text {
+  width: 100%;
   background-color: #4cf3bb;
+  font-family: inherit;
   border: none;
   border-radius: 4px;
   height: 3.2rem;
@@ -143,28 +122,115 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 2rem;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+  padding: 1rem 0;
 }
 .filter {
-  background-color: #111;
+  background-color: #333;
   padding: 0.6rem;
   border-radius: 2px;
   cursor: pointer;
+  font-size: 1rem;
 }
 .filter:hover {
   background-color: #333;
   box-shadow: 0 0 2px #fff;
 }
-.filter-type {
-  background-color: #193718;
+.filter-active {
+  background-color: #111;
 }
-.filter-type select {
-  background-color: #e67efe;
+.task-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  overflow-y: scroll;
+  max-height: 20rem;
+}
+.task-list::-webkit-scrollbar {
+  width: 1px;
+  background-color: #fff;
+}
+.task-list::-webkit-scrollbar-thumb {
+  background-color: #000;
+}
+.task {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  padding: 1.5rem 1.5rem;
+  margin: 0 1rem;
+  background-color: #ff8bff;
+  color: #000;
+  border-radius: 10px;
+  max-width: 30rem;
+}
+.task-title {
+  grid-column: 1 / -1;
+  justify-self: start;
   font-size: 1.2rem;
-  color: #000;
-  font-family: inherit;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  letter-spacing: 1px;
 }
-.filter-type select option {
+.task-time-created {
+  grid-column: 2;
+  grid-row: 2;
+  font-size: 1rem;
+}
+.task-description {
+  /* MAX CHARACTER NUMBER REQUIRED */
+}
+.add-task {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+}
+.add-task .add-task-text {
   background-color: #4cf3bb;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  color: #193718;
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+.add-task-text:hover {
+  background-color: #111;
+  color: #ff8bff;
+  transition: all 0.3s;
+}
+/* RIGHT CARD */
+.card-right {
+  background-color: #45dfab;
   color: #000;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  height: 50%;
+}
+.title-progress-step {
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 1.2px;
+}
+.card-right input {
+  border: none;
+  min-height: 2rem;
+  font-family: inherit;
+  background-color: #45dfab;
+  margin-top: 1rem;
+}
+
+.create-task-title {
+  font-size: 2.4rem;
+  padding-left: 1rem;
+}
+.create-task-description {
+  padding-left: 1rem;
+}
+.task-datetime {
+  padding-left: 1rem;
 }
