--- a/style.css
+++ b/style.css
@@ -166,17 +166,30 @@ body {
   max-width: 30rem;
 }
 .task-title {
-  grid-column: 1 / -1;
   justify-self: start;
   font-size: 1.2rem;
   font-weight: 600;
   margin-bottom: 1rem;
   letter-spacing: 1px;
 }
+.btn-del {
+  display: flex;
+  justify-content: flex-end;
+}
+.del-icon {
+  width: 1.8rem;
+  height: 1.8rem;
+  border-radius: 50%;
+}
+.del-icon:hover {
+  box-shadow: 0 0 3px #193718;
+  cursor: pointer;
+}
 .task-time-created {
   grid-column: 2;
   grid-row: 2;
   font-size: 1rem;
+  justify-self: flex-end;
 }
 .task-description {
   /* MAX CHARACTER NUMBER REQUIRED */
@@ -186,11 +199,12 @@ body {
   width: 100%;
   margin: 0 auto;
   justify-content: center;
-  cursor: pointer;
   align-items: center;
 }
 .add-task .add-task-text {
+  cursor: pointer;
   background-color: #4cf3bb;
+  border: 2px solid #fff;
   padding: 1rem 2rem;
   border-radius: 10px;
   color: #193718;
@@ -200,7 +214,8 @@ body {
 .add-task-text:hover {
   background-color: #111;
   color: #ff8bff;
-  transition: all 0.3s;
+  transform: scale(1.1);
+  transition: all 0.15s;
 }
 /* RIGHT CARD */
 .card-right {
@@ -209,7 +224,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  height: 50%;
+  min-height: 50%;
 }
 .title-progress-step {
   font-size: 2rem;
