--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding-bottom: 2rem;
+  min-height: 44.8rem;
+  min-width: 38.5rem;
 }
 .title {
   font-size: 2.4rem;
