--- a/style.css
+++ b/style.css
@@ -218,6 +218,11 @@ body {
   transform: scale(1.1);
   transition: all 0.15s;
 }
+.error-message {
+  color: #f0ec83;
+  font-size: 2rem;
+  font-weight: 600;
+}
 /* RIGHT CARD */
 .card-right {
   background-color: #45dfab;
