--- a/style.css
+++ b/style.css
@@ -161,7 +161,6 @@ body {
   grid-template-columns: 4fr 1fr;
   padding: 1.5rem 1.5rem;
   margin: 0 1rem;
-  background-color: #ff8bff;
   color: #000;
   border-radius: 10px;
   max-width: 30rem;
@@ -192,9 +191,7 @@ body {
   font-size: 1rem;
   justify-self: flex-end;
 }
-.task-description {
-  /* MAX CHARACTER NUMBER REQUIRED */
-}
+
 .add-task {
   display: flex;
   width: 100%;
@@ -247,11 +244,22 @@ body {
 
 .create-task-title {
   font-size: 2.4rem;
-  padding-left: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
 }
 .create-task-description {
-  padding-left: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
 }
 .task-datetime {
   padding-left: 1rem;
+}
+.bad-input {
+  box-shadow: inset 0 0 0 3px rgb(255, 87, 87);
+}
+.done {
+  background-color: #54d4ff;
+}
+.undone {
+  background-color: #ff8bff;
 }
